@@ -1,3 +1,5 @@
+	* reject cached association validation if expiry is in past
+
 0.11:
 	* document common error codes from claimed_identity, and
 	  cleanup some error handling/codes
